# KlustrEye

./: .env.example  .gitignore  LICENSE  README.md  forge.config.ts  next.config.mjs  package-lock.json  package.json  server.ts
.claude/: settings.local.json
.github/workflows/: build.yml
electron/: main.js
prisma/: schema.prisma
scripts/: pack-server.mjs
src/: instrumentation.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: globals.css  layout.tsx  page.tsx
src/components/: cloud-provider-icon.tsx  cluster-color-provider.tsx  cluster-shell-terminal.tsx  cluster-switcher.tsx  command-palette.tsx  create-resource-dialog.tsx  edit-resources-dialog.tsx  error-boundary.tsx  footer.tsx  header.tsx  keyboard-shortcuts-dialog.tsx  klustreye-logo.tsx  log-viewer.tsx  manage-organizations-dialog.tsx  mobile-sidebar-drawer.tsx  namespace-selector.tsx  pod-metrics-chart.tsx  port-forward-dialog.tsx  port-forward-indicator.tsx  port-forward-tab.tsx  providers.tsx  related-events.tsx  rename-context-dialog.tsx  resource-detail.tsx  resource-list-page.tsx  resource-table.tsx  restart-dialog.tsx  scale-dialog.tsx  sidebar.tsx  tab-bar.tsx  terminal-inner.tsx  terminal-panel.tsx  trigger-cronjob-dialog.tsx  yaml-editor.tsx
src/components/ui/: badge.tsx  (+5 more)
src/hooks/: use-cluster-namespace.ts  use-clusters.ts  use-crds.ts  use-keyboard-shortcuts.ts  use-kubeconfig-setting.ts  use-metrics.ts  use-organizations.ts  use-pod-logs.ts  use-port-forward.ts  use-resources.ts  use-search.ts
src/lib/: color-presets.ts  constants.ts  prisma.ts  utils.ts
src/plugins/: index.ts
(+101 files in other folders)
